# shop_project

shop/: .prospector.yaml  pyproject.toml
shop/catalog/: admin.py  celery.py  models.py  serializers.py  tasks.py  urls.py  views.py
shop/shop/: __init__.py  celery.py  settings.py  urls.py
shop/users/: models.py  urls.py  views.py
